[gd_scene load_steps=3 format=3 uid="uid://byglw22sudck0"]

[ext_resource type="Script" uid="uid://cbv2obfuse14k" path="res://scenes/scripts/scenes/upgrade_selector.gd" id="1_dx0hn"]
[ext_resource type="Texture2D" uid="uid://7exkf7r7oiq4" path="res://assets/object/block.png" id="2_araw3"]

[node name="UpgradeSelector" type="Node2D"]
script = ExtResource("1_dx0hn")

[node name="Box" type="Sprite2D" parent="."]
texture = ExtResource("2_araw3")

[node name="UpgradeLocations" type="Node2D" parent="."]

[node name="upgrade_1" type="Marker2D" parent="UpgradeLocations"]
position = Vector2(-52, -59)

[node name="upgrade_2" type="Marker2D" parent="UpgradeLocations"]
position = Vector2(52, -59)

[node name="upgrade_3" type="Marker2D" parent="UpgradeLocations"]
position = Vector2(0, 56)
